# metaGCsnap

./: .gitignore  GCsnap.yml  README.md  allSnap.yml  config.yaml  install_providers.sh  pyproject.toml
annotations/: families.py  mmseqs_cluster.py  taxonomy.py  taxtree.py
envs/: GCsnap_base.yml  metaGCsnap_base.yml  provider_local.yml  provider_mgnify.yml  provider_ncbi.yml
gcsnap/: __main__.py  configuration.py  consts.py  genomic_context.py  rich_console.py  targets.py  utils.py
gcsnap/annotations/: de_novo.py  families.py  kraken.py  mmseqs_cluster.py  operons.py  sequence_search.py  taxonomy.py  taxtree.py
gcsnap/providers/MGnify/: assemblies.py  dataset.py  gatherer.py  helpers.py  make.py  metadata.py  scraper.py  sequences.py
gcsnap/providers/local/: assemblies.py  db_create.py  db_handler_assemblies.py  db_handler_sequences.py  make.py  parallel_tools.py  parallel_tools_fu.py  sequences.py
gcsnap/providers/ncbi/: assemblies.py  assembly_links.py  entrez_query.py  gatherer.py  make.py  (+4 more)
gcsnap/supplementary/: make_mmseqs.sh
gcsnap/visual/: advanced.py  colors.py  dendrogram.py  distance.py  interactive.py  runner.py  static.py  summary.py
providers/MGnify/: assemblies.py  dataset.py  gatherer.py  helpers.py  make.py  metadata.py  parquet_search.py  scraper.py  sequences.py
providers/ncbi/: assemblies.py  assembly_links.py  dataset.py  gatherer.py  helpers.py  make.py  scraper.py  sequence_mapping.py  sequences.py
supplementary/: download.py  make_metaGCsnap.py
test/: mgnify_ids.txt  ncbi_ids.txt  uniprot_ids.txt
tutorial/: tutorial.ipynb
tutorial/data/: AAC38280.1_AFDB_hits.csv  AAC38280.1_MGnify_hits.tsv  extraction_target.csv  rubiscos.txt
visual/: __init__.py  advanced.py  colors.py  dendrogram.py  interactive.py  runner.py  static.py  types.py
visual/panels/: __init__.py  dendrogram_panel.py  genomic_map.py  legend.py  most_common.py  network.py
(+18 files in other folders)
