
[project]
name = "gcsnap"
version = "2.0.0"
description = "GCsnap: Interactive snapshots for the comparison of protein-coding genomic contexts"
authors = [
    {name = "Joana Pereira", email = "pereira.joanam@gmail.com"},
]

readme = "README.md"
license = {text = "MIT"}
keywords = ["genomic contexts homology"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.urls]
Homepage = "https://github.com/RetoKrummenacher/GCsnap"

[project.scripts]
GCsnap = "gcsnap.__main__:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [ "gcsnap" ] 
