
[project]
name = "metaGCsnap"
version = "1.0.0"
description = "metaGCsnap: Interactive snapshots for the comparison of protein-coding genomic contexts across biomes"
authors = [
    { name = "Joana Pereira", email = "pereira.joanam@gmail.com"
      name = "Jacopo Pasqualini, email="jacopo.pasqualini95@gmail.com",
      name = "Reto Krummenacher", email="reto.krummenacher@unibas.ch" },
]

readme = "README.md"
license = {text = "MIT"}
keywords = ["genomic contexts homology"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.urls]
Homepage = "https://github.com/GCsnap"

[project.scripts]
GCsnap = "gcsnap.__main__:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
